[gd_scene load_steps=50 format=2]

[ext_resource path="res://Assets/bomb-assets/2-Bomb On/10.png" type="Texture" id=1]
[ext_resource path="res://Assets/bomb-assets/3-Explotion/5.png" type="Texture" id=2]
[ext_resource path="res://Assets/bomb-assets/2-Bomb On/4.png" type="Texture" id=3]
[ext_resource path="res://Assets/bomb-assets/2-Bomb On/9.png" type="Texture" id=4]
[ext_resource path="res://Assets/bomb-assets/2-Bomb On/6.png" type="Texture" id=5]
[ext_resource path="res://Assets/bomb-assets/2-Bomb On/8.png" type="Texture" id=6]
[ext_resource path="res://Assets/bomb-assets/2-Bomb On/7.png" type="Texture" id=7]
[ext_resource path="res://Assets/bomb-assets/3-Explotion/1.png" type="Texture" id=8]
[ext_resource path="res://Assets/bomb-assets/2-Bomb On/2.png" type="Texture" id=9]
[ext_resource path="res://Assets/bomb-assets/3-Explotion/2.png" type="Texture" id=10]
[ext_resource path="res://Assets/bomb-assets/3-Explotion/4.png" type="Texture" id=11]
[ext_resource path="res://Assets/bomb-assets/3-Explotion/6.png" type="Texture" id=12]
[ext_resource path="res://Assets/bomb-assets/3-Explotion/3.png" type="Texture" id=13]
[ext_resource path="res://Assets/bomb-assets/2-Bomb On/5.png" type="Texture" id=14]
[ext_resource path="res://Assets/bomb-assets/3-Explotion/7.png" type="Texture" id=15]
[ext_resource path="res://Assets/bomb-assets/3-Explotion/8.png" type="Texture" id=16]
[ext_resource path="res://Assets/bomb-assets/2-Bomb On/1.png" type="Texture" id=17]
[ext_resource path="res://Assets/bomb-assets/3-Explotion/9.png" type="Texture" id=18]
[ext_resource path="res://Assets/bomb-assets/2-Bomb On/3.png" type="Texture" id=19]
[ext_resource path="res://Scripts/Itens/Bomb.gd" type="Script" id=20]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 17 )
region = Rect2( 33, 36, 32, 52 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 9 )
region = Rect2( 33, 37, 32, 52 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 19 )
region = Rect2( 33, 36, 32, 52 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 33, 36, 32, 52 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 14 )
region = Rect2( 33, 36, 32, 52 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 33, 36, 32, 52 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 7 )
region = Rect2( 33, 37, 32, 52 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 33, 36, 32, 52 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 33, 37, 32, 52 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 33, 37, 32, 52 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 8 )
region = Rect2( 10, 23, 78, 78 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 10 )
region = Rect2( 5, 19, 88, 88 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 13 )
region = Rect2( 2, 16, 92, 92 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 11 )
region = Rect2( 0, 6, 96, 102 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 5, 5, 82, 82 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 12 )
region = Rect2( 6, 0, 82, 82 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 15 )
region = Rect2( 7, 1, 82, 74 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 16 )
region = Rect2( 6, 0, 82, 72 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 18 )
region = Rect2( 6, 0, 82, 70 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 17 )
region = Rect2( 33, 38, 32, 50 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 9 )
region = Rect2( 33, 36, 32, 52 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 19 )
region = Rect2( 34, 37, 32, 52 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 33, 38, 32, 52 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "explode",
"speed": 14.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 18, 20.5 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 53, 48 )

[sub_resource type="Animation" id=30]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExplosionArea/ExplosionShape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=31]
resource_name = "explode"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "explode" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 18 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ExplosionArea/ExplosionShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=32]
resource_name = "idle"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 3 ]
}

[node name="Bomb" type="AnimatedSprite"]
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 4 )
animation = "explode"
frame = 1
script = ExtResource( 20 )

[node name="CollectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
visible = false
position = Vector2( 0, 5.5 )
shape = SubResource( 5 )

[node name="ExplosionArea" type="Area2D" parent="." groups=["bomb_explosion", "damage"]]

[node name="ExplosionShape" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource( 29 )

[node name="BombAnimation" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/RESET = SubResource( 30 )
anims/explode = SubResource( 31 )
anims/idle = SubResource( 32 )

[connection signal="body_entered" from="CollectArea" to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="BombAnimation" to="." method="_on_BombAnimation_animation_finished"]
